--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -15,3 +15,12 @@
     margin-bottom: 0;
     margin-top: 5px;
 }
+
+/**
+ * Font icons inside GroceryCRUD
+ */
+.ajax_list .fa {
+	font-size: 18px;
+	color: inherit;
+	text-decoration: none;
+}
