Added sample to use non-FontAwesome icons with 'icon' CSS class

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -17,6 +17,14 @@
 }
 
 /**
+ * Align custom icon fonts with FontAwesome
+ */
+.icon {
+	display: inline-block;
+	width: 20px;
+}
+
+/**
  * Font icons inside GroceryCRUD
  */
 .ajax_list .fa {
