--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -1,3 +1,6 @@
 /**
  * Stylesheet for Frontend Website
+ * 
+ * Recommend to avoid this and use SASS file instead:
+ * 	/assets/sass/frontend.scss
  */
